samples/_failures_safe/1761520346_ea9c33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eddb553c.c: In function ‘main’:
./samples/SAFE/__tmp_eddb553c.c:134:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  134 |         int rows_b
      |         ^~~
./samples/SAFE/__tmp_eddb553c.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eddb553c.c:134:9: error: expected declaration or statement at end of input
